<resources>
    <string name="app_name">Quiz Application</string>

    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="str_next">Next</string>
    <string name="title_activity_result">Results!!!</string>
    <string name="add_question">Add Question</string>
    <string name="settings_menu_item">Settings</string>
    <string name="your_score">Your Score</string>
    <string name="quizapp">Quiz App</string>
    <string name="quiz_app">Quiz App</string>
    <string name="welcome">Welcome</string>
    <string name="please_enter_your_name">Please choose your desired role</string>
    <string name="name">Name</string>
    <string name="start">User</string>
    <string name="admin">Admin</string>
    <string name="please_enter_question">Please enter Question</string>
    <string name="add">Add</string>
    <string name="option_1">Option 1</string>

    <string name="option_3">Option 3</string>

    <string name="option_4">Option 4</string>

    <string name="option_2">Option 2</string>
    <string name="back_to_main">Back to Main</string>
    <string name="answer">Answer</string>
    <string name="str_previous">Previous</string>
    <string name="str_radiobutton">RadioButton</string>
    <string name="strprevious">Previous</string>
</resources>