<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/ic_bg"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="20dp"
        android:indeterminate="false"
        android:max="12"
        android:minWidth="300dp"
        android:minHeight="100dp"
        android:progress="0" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:minWidth="300dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">
        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="Large Text"
            android:textColor="@color/white"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="match_parent"
            android:padding="20dp"
            android:layout_height="0dp"
            android:layout_weight="0.04" >
            <RadioButton
                android:id="@+id/radio0"
                android:padding="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/str_radiobutton" />
            <RadioButton
                android:id="@+id/radio1"
                android:padding="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/str_radiobutton" />
            <RadioButton
                android:id="@+id/radio2"
                android:padding="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/str_radiobutton" />
            <RadioButton
                android:id="@+id/radio3"
                android:padding="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/str_radiobutton" />
        </RadioGroup>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:minWidth="250dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/buttonNext"
            android:layout_width="125dp"
            android:layout_marginLeft="25dp"
            android:layout_height="wrap_content"
            android:text="@string/str_next" />

        <Button
            android:id="@+id/buttonPrevious"
            android:layout_width="125dp"
            android:layout_marginLeft="25dp"
            android:layout_height="wrap_content"
            android:text="@string/strprevious" />

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>